--- a/milton-manager/build.gradle
+++ b/milton-manager/build.gradle
@@ -2,8 +2,11 @@ buildscript {
     ext.kotlin_version = '1.3.71'
     ext.ktor_version = '1.3.2'
     ext.appengine_version = '1.9.60'
-    ext.appengine_plugin_version = '2.1.0'
-    ext.gce_logback_version = '0.60.0-alpha'
+    ext.appengine_plugin_version = '2.2.0'
+    ext.gce_logback_version = '0.116.0-alpha'
+    ext.gce_datastore_version = '1.102.3'
+    ext.gce_storage_version = '1.106.0'
+    ext.algolia_version = '1.3.1'
 
     repositories {
         mavenCentral()
@@ -30,16 +33,35 @@ repositories {
     mavenCentral()
     jcenter()
     maven { url "https://kotlin.bintray.com/ktor" }
+    maven { url "https://dl.bintray.com/algolia/maven" }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "io.ktor:ktor-server-servlet:$ktor_version"
-    compile "io.ktor:ktor-html-builder:$ktor_version"
-    compile "com.google.cloud:google-cloud-logging-logback:$gce_logback_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "io.ktor:ktor-server-servlet:$ktor_version"
+    implementation "io.ktor:ktor-gson:$ktor_version"
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+    implementation "io.ktor:ktor-client-okhttp:$ktor_version"
+    implementation "io.ktor:ktor-client-json:$ktor_version"
+    implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
+    implementation "io.ktor:ktor-client-gson:$ktor_version"
+    implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "com.algolia:algoliasearch-client-kotlin-jvm:$algolia_version"
+    implementation "com.typesafe:config:1.4.0"
+    implementation "com.google.cloud:google-cloud-logging-logback:$gce_logback_version"
+    implementation "com.google.cloud:google-cloud-datastore:$gce_datastore_version"
+    implementation "com.google.cloud:google-cloud-storage:$gce_storage_version"
 
     providedCompile "com.google.appengine:appengine:$appengine_version"
+
+    testImplementation "junit:junit:4.12"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+}
+
+appengine {
+    run {
+        port = 8081
+    }
 }
 
 task run(dependsOn: appengineRun)
-
