--- a/milton-manager/src/main/resources/application.conf
+++ b/milton-manager/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 ktor {
     application {
-        modules = [ com.example.demo.HelloApplicationKt.main ]
+        modules = [ io.terbium.milton.MiltonKt.miltonManager ]
     }
 }
