--- a/milton-processor/package.json
+++ b/milton-processor/package.json
@@ -30,6 +30,7 @@
     "mocha": "^7.0.0",
     "wait-port": "^0.2.7",
     "@types/express": "^4.16.0",
+    "@types/dompurify": "^2.0.1",
     "chai": "^4.2.0",
     "tslint": "^6.0.0"
   }
