Add search feature

--- a/milton-manager/src/main/resources/application.conf
+++ b/milton-manager/src/main/resources/application.conf
@@ -3,3 +3,6 @@ ktor {
         modules = [ io.terbium.milton.MiltonKt.miltonManager ]
     }
 }
+milton {
+    url = "https://milton-processor-dot-milton-273820.ue.r.appspot.com"
+}
