Update Milton url to be Google cloud function endpoint

--- a/milton-manager/src/main/resources/application.conf
+++ b/milton-manager/src/main/resources/application.conf
@@ -4,5 +4,5 @@ ktor {
     }
 }
 milton {
-    url = "https://milton-processor-dot-milton-273820.ue.r.appspot.com"
+    url = "https://us-central1-dsouza-proving-ground.cloudfunctions.net/scribe"
 }
