--- a/milton-manager/build.gradle
+++ b/milton-manager/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.gce_logback_version = '0.116.0-alpha'
     ext.gce_datastore_version = '1.102.3'
     ext.gce_storage_version = '1.106.0'
+    ext.google_api_client_version = '1.30.4'
     ext.algolia_version = '1.3.1'
 
     repositories {
@@ -48,6 +49,8 @@ dependencies {
     implementation "io.ktor:ktor-server-netty:$ktor_version"
     implementation "com.algolia:algoliasearch-client-kotlin-jvm:$algolia_version"
     implementation "com.typesafe:config:1.4.0"
+    implementation "com.google.api-client:google-api-client-appengine:$google_api_client_version"
+    implementation "com.google.api-client:google-api-client-gson:$google_api_client_version"
     implementation "com.google.cloud:google-cloud-logging-logback:$gce_logback_version"
     implementation "com.google.cloud:google-cloud-datastore:$gce_datastore_version"
     implementation "com.google.cloud:google-cloud-storage:$gce_storage_version"
