--- a/milton-manager/src/main/resources/application.conf
+++ b/milton-manager/src/main/resources/application.conf
@@ -4,5 +4,6 @@ ktor {
     }
 }
 milton {
-    url = "https://us-central1-dsouza-proving-ground.cloudfunctions.net/scribe"
+    processorHost = "https://us-central1-dsouza-proving-ground.cloudfunctions.net/scribe"
+    projectName = "milton-273820"
 }
