--- a/milton-manager/build.gradle
+++ b/milton-manager/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.71'
+    ext.kotlin_version = '1.3.72'
     ext.ktor_version = '1.3.2'
     ext.appengine_version = '1.9.60'
     ext.appengine_plugin_version = '2.2.0'
@@ -38,7 +38,15 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "com.algolia:algoliasearch-client-kotlin-jvm:$algolia_version"
+    implementation "com.google.api-client:google-api-client-appengine:$google_api_client_version"
+    implementation "com.google.api-client:google-api-client-gson:$google_api_client_version"
+    implementation "com.google.cloud:google-cloud-logging-logback:$gce_logback_version"
+    implementation "com.google.cloud:google-cloud-datastore:$gce_datastore_version"
+    implementation "com.google.cloud:google-cloud-storage:$gce_storage_version"
+    implementation "com.google.inject:guice:4.0"
+    implementation "com.mailjet:mailjet-client:4.2.0"
+    implementation "com.typesafe:config:1.4.0"
     implementation "io.ktor:ktor-server-servlet:$ktor_version"
     implementation "io.ktor:ktor-gson:$ktor_version"
     implementation "io.ktor:ktor-client-core:$ktor_version"
@@ -47,13 +55,7 @@ dependencies {
     implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
     implementation "io.ktor:ktor-client-gson:$ktor_version"
     implementation "io.ktor:ktor-server-netty:$ktor_version"
-    implementation "com.algolia:algoliasearch-client-kotlin-jvm:$algolia_version"
-    implementation "com.typesafe:config:1.4.0"
-    implementation "com.google.api-client:google-api-client-appengine:$google_api_client_version"
-    implementation "com.google.api-client:google-api-client-gson:$google_api_client_version"
-    implementation "com.google.cloud:google-cloud-logging-logback:$gce_logback_version"
-    implementation "com.google.cloud:google-cloud-datastore:$gce_datastore_version"
-    implementation "com.google.cloud:google-cloud-storage:$gce_storage_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jsoup:jsoup:1.13.1"
 
     providedCompile "com.google.appengine:appengine:$appengine_version"
