Add scribe cache to avoid redundant article fetches
This change also adds a config file and refactors things to be a little
cleaner. We now use a scoped down service account with just the
permissions needed for the function to run.

--- a/milton-processor/.gcloudignore
+++ b/milton-processor/.gcloudignore
@@ -1,5 +1,9 @@
-# Exclude compiled .js files
-*.js
-
 # Exclude dependencies
 node_modules/
+
+# Service account key file
+key.json
+
+# Git
+.git
+.gitignore
