--- a/milton-processor/tsconfig.json
+++ b/milton-processor/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "commonjs"
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "module": "commonjs",
   },
   "include": [
     "*.ts"
