--- a/milton-manager/src/main/resources/application.conf
+++ b/milton-manager/src/main/resources/application.conf
@@ -6,4 +6,5 @@ ktor {
 milton {
     processorHost = "https://us-central1-dsouza-proving-ground.cloudfunctions.net/scribe"
     projectName = "milton-273820"
+    googleAuthClientId = "1044906185219-4vkbn44qlm9kte30e1teg8v0fjks11c0.apps.googleusercontent.com"
 }
