--- a/milton-manager/build.gradle
+++ b/milton-manager/build.gradle
@@ -47,14 +47,15 @@ dependencies {
     implementation "com.google.inject:guice:4.0"
     implementation "com.mailjet:mailjet-client:4.2.0"
     implementation "com.typesafe:config:1.4.0"
-    implementation "io.ktor:ktor-server-servlet:$ktor_version"
-    implementation "io.ktor:ktor-gson:$ktor_version"
+    implementation "io.ktor:ktor-auth:$ktor_version"
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-okhttp:$ktor_version"
     implementation "io.ktor:ktor-client-json:$ktor_version"
     implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
     implementation "io.ktor:ktor-client-gson:$ktor_version"
+    implementation "io.ktor:ktor-gson:$ktor_version"
     implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-server-servlet:$ktor_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jsoup:jsoup:1.13.1"
 
