--- a/milton-ui/package.json
+++ b/milton-ui/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.20",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
