Attempt some things

--- a/milton-ui/package.json
+++ b/milton-ui/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.6",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "bootswatch": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
