Switch to typed-rest-client for requests
To get gzip and user-agent support.
https://github.com/microsoft/typed-rest-client

--- a/milton-processor/package.json
+++ b/milton-processor/package.json
@@ -26,6 +26,7 @@
     "jsdom": "^16.2.0",
     "readability": "github:mozilla/readability",
     "request-promise-native": "latest",
+    "typed-rest-client": "^1.7.3",
     "typescript": "^3.8.1"
   },
   "devDependencies": {
