--- a/milton-processor/package.json
+++ b/milton-processor/package.json
@@ -18,23 +18,24 @@
     "deploy-function": "gcloud functions deploy scribe --runtime nodejs10 --allow-unauthenticated --trigger-http --memory 512MB --service-account scribe@dsouza-proving-ground.iam.gserviceaccount.com --set-env-vars NODE_ENV=prod"
   },
   "dependencies": {
-    "@google-cloud/storage": "^5.0.1",
+    "@google-cloud/storage": "^5.7.0",
+    "@mozilla/readability": "github:mozilla/readability",
     "base64url": "^3.0.1",
-    "dompurify": "^2.0.17",
+    "dompurify": "^2.2.6",
     "express": "^4.16.3",
     "fast-crc32c": "^2.0.0",
-    "jsdom": "^16.2.0",
+    "jsdom": "^16.4.0",
     "readability": "github:mozilla/readability",
-    "request-promise-native": "latest",
-    "typed-rest-client": "^1.7.3",
-    "typescript": "^3.8.1"
+    "request-promise-native": "^1.0.9",
+    "typed-rest-client": "^1.8.0",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "mocha": "^7.0.0",
-    "wait-port": "^0.2.7",
-    "@types/express": "^4.16.0",
-    "@types/dompurify": "^2.0.1",
+    "@types/dompurify": "^2.1.0",
+    "@types/express": "^4.17.9",
     "chai": "^4.2.0",
-    "tslint": "^6.0.0"
+    "mocha": "^7.2.0",
+    "tslint": "^6.1.3",
+    "wait-port": "^0.2.9"
   }
 }
