Update dependencies via npm audit and add puppeteer

--- a/milton-processor/package.json
+++ b/milton-processor/package.json
@@ -21,10 +21,12 @@
     "@google-cloud/storage": "^5.7.0",
     "@mozilla/readability": "github:mozilla/readability",
     "base64url": "^3.0.1",
+    "chrome-aws-lambda": "^10.1.0",
     "dompurify": "^2.2.6",
     "express": "^4.16.3",
     "fast-crc32c": "^2.0.0",
     "jsdom": "^16.4.0",
+    "puppeteer-core": "^13.5.1",
     "readability": "github:mozilla/readability",
     "request-promise-native": "^1.0.9",
     "typed-rest-client": "^1.8.0",
